fix(booter): fixupAppleEfiImages设置为 NO
FixupAppleEfiImages 的作用

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -384,7 +384,7 @@
 			<key>EnableWriteUnprotector</key>
 			<true/>
 			<key>FixupAppleEfiImages</key>
-			<true/>
+			<false/>
 			<key>ForceBooterSignature</key>
 			<false/>
 			<key>ForceExitBootServices</key>
