fix(nvram): aDD 启动参数和语言

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1320,11 +1320,11 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>-v keepsyms=1</string>
+				<string>-v keepsyms=1 debug=0x100 alcid=1 nvda_drv_vrl=1</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
-				<data>cnUtUlU6MjUy</data>
+				<string>zh-Hans:0</string>
 				<key>run-efi-updater</key>
 				<string>No</string>
 			</dict>
