--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1393,7 +1393,7 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>M0000000000000001</string>
+			<string>C02546306GUGPF7CB</string>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
@@ -1403,11 +1403,11 @@
 			<key>SystemMemoryStatus</key>
 			<string>Auto</string>
 			<key>SystemProductName</key>
-			<string>iMac19,1</string>
+			<string>iMac17,1</string>
 			<key>SystemSerialNumber</key>
-			<string>W00000000001</string>
+			<string>C02QPMZGGG7L</string>
 			<key>SystemUUID</key>
-			<string>00000000-0000-0000-0000-000000000000</string>
+			<string>67C22D47-40E3-44D7-BD55-81487361008E</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
