--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -104,95 +104,15 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>SSDT.aml</string>
+				<string>SSDT-EC.aml</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
-				<string>SSDT.aml</string>
+				<string>SSDT-EC.aml</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>SSDT1.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT1.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT2.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT2.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT3.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT3.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT4.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT4.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT5.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT5.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT6.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT6.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>UEFI.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>UEFI.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>WSMT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>WSMT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>XSDT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>XSDT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Generic USBX device for USB power properties</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT-USBX.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>Sets plugin-type to 1 on first Processor object</string>
+				<string>SSDT-PLUG.aml</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
@@ -200,11 +120,91 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>Faked Embedded Controller</string>
+				<string>SSDT-USBX.aml</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
-				<string>SSDT-EC.aml</string>
+				<string>SSDT-USBX.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT1.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT1.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT2.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT2.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT3.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT3.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT4.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT4.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT5.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT5.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>SSDT6.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT6.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>UEFI.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>UEFI.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>WSMT.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>WSMT.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
+				<string>XSDT.aml</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>XSDT.aml</string>
 			</dict>
 		</array>
 		<key>Delete</key>
@@ -472,24 +472,6 @@
 				<true/>
 				<key>ExecutablePath</key>
 				<string>Contents/MacOS/Lilu</string>
-				<key>MaxKernel</key>
-				<string></string>
-				<key>MinKernel</key>
-				<string></string>
-				<key>PlistPath</key>
-				<string>Contents/Info.plist</string>
-			</dict>
-			<dict>
-				<key>Arch</key>
-				<string>Any</string>
-				<key>BundlePath</key>
-				<string>NVMeFix.kext</string>
-				<key>Comment</key>
-				<string>NVMeFix.kext</string>
-				<key>Enabled</key>
-				<true/>
-				<key>ExecutablePath</key>
-				<string>Contents/MacOS/NVMeFix</string>
 				<key>MaxKernel</key>
 				<string></string>
 				<key>MinKernel</key>
