--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -16,195 +16,19 @@
 		<array>
 			<dict>
 				<key>Comment</key>
-				<string>APIC.aml</string>
+				<string>SSDT-EC-USBX-DESKTOP.aml</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
-				<string>APIC.aml</string>
+				<string>SSDT-EC-USBX-DESKTOP.aml</string>
 			</dict>
 			<dict>
 				<key>Comment</key>
-				<string>BGRT.aml</string>
+				<string>SSDT-PLUG-DRTNIA.aml</string>
 				<key>Enabled</key>
 				<true/>
 				<key>Path</key>
-				<string>BGRT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>DBG2.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>DBG2.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>DBGP.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>DBGP.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>DSDT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>DSDT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>FACP.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>FACP.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>FIDT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>FIDT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>FPDT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>FPDT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>HPET.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>HPET.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>LPIT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>LPIT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>MCFG.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>MCFG.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT-EC.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT-EC.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT-PLUG.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT-PLUG.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT-USBX.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT-USBX.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT1.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT1.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT2.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT2.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT3.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT3.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT4.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT4.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT5.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT5.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>SSDT6.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>SSDT6.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>UEFI.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>UEFI.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>WSMT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>WSMT.aml</string>
-			</dict>
-			<dict>
-				<key>Comment</key>
-				<string>XSDT.aml</string>
-				<key>Enabled</key>
-				<true/>
-				<key>Path</key>
-				<string>XSDT.aml</string>
+				<string>SSDT-PLUG-DRTNIA.aml</string>
 			</dict>
 		</array>
 		<key>Delete</key>
