feat(deviceproperties): 集显修改

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -250,15 +250,15 @@
 			<key>PciRoot(0x0)/Pci(0x2,0x0)</key>
 			<dict>
 				<key>AAPL,GfxYTile</key>
-				<data>AQAAAA==</data>
+				<data>AAAAAA==</data>
 				<key>AAPL,ig-platform-id</key>
-				<data>AAASGQ==</data>
+				<data>EAASGQ==</data>
 				<key>device-id</key>
-				<data>GxkAAA==</data>
-				<key>framebuffer-fbmem</key>
-				<data>AACQAA==</data>
+				<data>EhkAAA==</data>
 				<key>framebuffer-patch-enable</key>
 				<data>AQAAAA==</data>
+				<key>framebuffer-fbmem</key>
+				<data>AACQAA==</data>
 				<key>framebuffer-stolenmem</key>
 				<data>AAAwAQ==</data>
 			</dict>
