--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -260,15 +260,15 @@
 				<key>AAPL,GfxYTile</key>
 				<data>AAAAAA==</data>
 				<key>AAPL,ig-platform-id</key>
-				<data>EAASGQ==</data>
-				<key>device-id</key>
-				<data>EhkAAA==</data>
+				<data>AQASGQ==</data>
 				<key>framebuffer-patch-enable</key>
 				<data>AQAAAA==</data>
-				<key>framebuffer-fbmem</key>
-				<data>AACQAA==</data>
 				<key>framebuffer-stolenmem</key>
 				<data>AAAwAQ==</data>
+				<key>framebuffer-fbmem</key>
+				<data>AACQAA==</data>
+				<key>device-id</key>
+				<data>GxkAAA==</data>
 			</dict>
 			<key>PciRoot(0x0)/Pci(0x1b,0x0)</key>
 			<dict>
@@ -1076,7 +1076,52 @@
 			<false/>
 		</dict>
 		<key>Tools</key>
-		<array/>
+		<array>
+			<dict>
+				<key>Arguments</key>
+				<string></string>
+				<key>Auxiliary</key>
+				<true/>
+				<key>Comment</key>
+				<string>modGRUBShell.efi</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Flavour</key>
+				<string>OpenShell:UEFIShell:Shell</string>
+				<key>FullNvramAccess</key>
+				<false/>
+				<key>Name</key>
+				<string>modGRUBShell.efi</string>
+				<key>Path</key>
+				<string>modGRUBShell.efi</string>
+				<key>RealPath</key>
+				<false/>
+				<key>TextMode</key>
+				<false/>
+			</dict>
+			<dict>
+				<key>Arguments</key>
+				<string></string>
+				<key>Auxiliary</key>
+				<true/>
+				<key>Comment</key>
+				<string>OpenShell.efi</string>
+				<key>Enabled</key>
+				<true/>
+				<key>Flavour</key>
+				<string>OpenShell:UEFIShell:Shell</string>
+				<key>FullNvramAccess</key>
+				<false/>
+				<key>Name</key>
+				<string>OpenShell.efi</string>
+				<key>Path</key>
+				<string>OpenShell.efi</string>
+				<key>RealPath</key>
+				<false/>
+				<key>TextMode</key>
+				<false/>
+			</dict>
+		</array>
 	</dict>
 	<key>NVRAM</key>
 	<dict>
@@ -1174,9 +1219,9 @@
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>MLB</key>
-			<string>D25302207GUF8YLCB</string>
+			<string>C02536403CDGPF7AD</string>
 			<key>ProcessorType</key>
-			<integer>1541</integer>
+			<integer>0</integer>
 			<key>ROM</key>
 			<data>HBsNYWTp</data>
 			<key>SpoofVendor</key>
@@ -1184,20 +1229,20 @@
 			<key>SystemMemoryStatus</key>
 			<string>Auto</string>
 			<key>SystemProductName</key>
-			<string>iMac14,2</string>
+			<string>iMac17,1</string>
 			<key>SystemSerialNumber</key>
-			<string>D25K3TY0F8JC</string>
+			<string>C02QC0DRGG7L</string>
 			<key>SystemUUID</key>
-			<string>1F74D603-7D84-4B8B-AA16-90B361E9F984</string>
+			<string>53BC3D1B-252E-4A6B-A06C-6918B5E6523B</string>
 		</dict>
 		<key>SMBIOS</key>
 		<dict>
 			<key>BIOSReleaseDate</key>
-			<string>04/18/2022</string>
+			<string>08/17/2023</string>
 			<key>BIOSVendor</key>
 			<string></string>
 			<key>BIOSVersion</key>
-			<string>433.140.2.0.0</string>
+			<string>522.0.0.0.0</string>
 			<key>BoardAssetTag</key>
 			<string>Base Board Asset Tag</string>
 			<key>BoardLocationInChassis</key>
@@ -1205,29 +1250,29 @@
 			<key>BoardManufacturer</key>
 			<string></string>
 			<key>BoardProduct</key>
-			<string>Mac-27ADBB7B4CEE8E61</string>
+			<string>Mac-DB15BD556843C820</string>
 			<key>BoardSerialNumber</key>
-			<string>D25302207GUF8YLCB</string>
+			<string>C02536403CDGPF7AD</string>
 			<key>BoardType</key>
 			<integer>10</integer>
 			<key>BoardVersion</key>
-			<string>iMac14,2</string>
+			<string>iMac17,1</string>
 			<key>ChassisAssetTag</key>
 			<string>Asset Tag#</string>
 			<key>ChassisManufacturer</key>
 			<string></string>
 			<key>ChassisSerialNumber</key>
-			<string>D25K3TY0F8JC</string>
+			<string>C02QC0DRGG7L</string>
 			<key>ChassisType</key>
 			<integer>13</integer>
 			<key>ChassisVersion</key>
-			<string>Mac-27ADBB7B4CEE8E61</string>
+			<string>Mac-DB15BD556843C820</string>
 			<key>FirmwareFeatures</key>
-			<data>N+EP4AAAAAA=</data>
+			<data>N+EP/AgAAAA=</data>
 			<key>FirmwareFeaturesMask</key>
-			<data>P/8f/wAAAAA=</data>
+			<data>P/8f/wgAAAA=</data>
 			<key>PlatformFeature</key>
-			<integer>1</integer>
+			<integer>0</integer>
 			<key>ProcessorType</key>
 			<integer>1541</integer>
 			<key>SmcVersion</key>
@@ -1237,13 +1282,13 @@
 			<key>SystemManufacturer</key>
 			<string></string>
 			<key>SystemProductName</key>
-			<string>iMac14,2</string>
+			<string>iMac17,1</string>
 			<key>SystemSKUNumber</key>
 			<string>System SKU#</string>
 			<key>SystemSerialNumber</key>
-			<string>D25K3TY0F8JC</string>
+			<string>C02QC0DRGG7L</string>
 			<key>SystemUUID</key>
-			<string>1F74D603-7D84-4B8B-AA16-90B361E9F984</string>
+			<string>53BC3D1B-252E-4A6B-A06C-6918B5E6523B</string>
 			<key>SystemVersion</key>
 			<string>1.0</string>
 		</dict>
